# adjointx

./: README.md  pyproject.toml
examples/: timing_comparison.py
src/adjointx/: __init__.py
tests/: __init__.py  test_construct_objective.py
